# sayo_api_rs

./: Cargo.toml
examples/: simple_test.rs
src/: byte_converter.rs  cross_platform_utils.rs  device.rs  device_constants.rs  device_error_handling.rs  lib.rs  lock_manager.rs  report_codec.rs  structures.rs  structures_codec.rs  utility.rs
