[package]
name = "sayo_api_rs"
version = "0.1.0"
edition = "2024"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"

[dependencies]
futures = "0.3.30"
encoding_rs = "0.8.34"
once_cell = "1.19.0"
# hid_rs = { path = "../hid_rs" }
hid_rs = {git = "https://github.com/svr2kos2/hid_rs.git" }

uuid = "1.19.0"
pollster = "0.3"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
futures-timer = "3.0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }